[gd_scene load_steps=20 format=3 uid="uid://cfbw1grygd8n2"]

[ext_resource type="Texture2D" uid="uid://cohe8f48beq7w" path="res://Assets/UI_Elements/background.png" id="1_i5xo5"]
[ext_resource type="Script" path="res://Scripts/DeckBuilding.gd" id="1_ukknt"]
[ext_resource type="Texture2D" uid="uid://bxy5ptuc8qkxm" path="res://Assets/UI_Elements/deck_button.png" id="2_h0hsk"]
[ext_resource type="Texture2D" uid="uid://gumymi60u6tm" path="res://Assets/UI_Elements/button_container.png" id="2_h6o8o"]
[ext_resource type="Texture2D" uid="uid://csy218dyha3ap" path="res://Assets/UI_Elements/deck_button-focused.png" id="3_e8p6n"]
[ext_resource type="Texture2D" uid="uid://ivmycgmn6sad" path="res://Assets/UI_Elements/deck_button-pressed.png" id="4_2kqoo"]
[ext_resource type="Texture2D" uid="uid://q224tuuc6lrr" path="res://Assets/UI_Elements/deck.png" id="6_i1sy5"]
[ext_resource type="Shader" path="res://Assets/Shaders/outline.gdshader" id="6_ueell"]
[ext_resource type="Script" path="res://Scripts/DeckButtonTexture.gd" id="7_cl8wm"]
[ext_resource type="Script" path="res://Scenes/DeckBuilder/ShopCard.gd" id="10_clvct"]
[ext_resource type="FontFile" uid="uid://bp8k0t32rtbfy" path="res://Assets/Fonts/I-pixel-u.ttf" id="11_d8n7i"]
[ext_resource type="Texture2D" uid="uid://dkshg6c1ua5c7" path="res://Assets/UI_Elements/Inventory.png" id="12_d4q3d"]
[ext_resource type="PackedScene" uid="uid://c2gkgubf6jijx" path="res://Scenes/DeckBuilder/Slot.tscn" id="13_wockh"]
[ext_resource type="Script" path="res://Scenes/DeckBuilder/inventory.gd" id="14_oet43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0gu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pwqlm"]
texture = ExtResource("3_e8p6n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eb4a3"]
texture = ExtResource("4_2kqoo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dpvu7"]
texture = ExtResource("2_h0hsk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cggu2"]
shader = ExtResource("6_ueell")
shader_parameter/color = Color(1, 1, 1, 0)
shader_parameter/width = 6.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[node name="DeckBuilding" type="Node2D"]
script = ExtResource("1_ukknt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Shop" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_clvct")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="CanvasLayer/Shop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i5xo5")
expand_mode = 2

[node name="DeckContainer" type="TextureRect" parent="CanvasLayer/Shop"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1444.0
texture = ExtResource("2_h6o8o")

[node name="DeckButton" type="Button" parent="CanvasLayer/Shop/DeckContainer"]
layout_mode = 2
anchor_top = 0.425
anchor_right = 0.899
anchor_bottom = 0.555
offset_left = 36.0
offset_right = 0.0759888
offset_bottom = -0.400024
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp0gu")
theme_override_styles/hover = SubResource("StyleBoxTexture_pwqlm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eb4a3")
theme_override_styles/normal = SubResource("StyleBoxTexture_dpvu7")

[node name="DeckTexture" type="TextureRect" parent="CanvasLayer/Shop/DeckContainer"]
material = SubResource("ShaderMaterial_cggu2")
layout_mode = 2
anchor_left = 0.263
anchor_top = 0.105
anchor_right = 0.725
anchor_bottom = 0.39
offset_left = -0.188004
offset_top = -0.400002
offset_right = -0.100006
offset_bottom = -0.200012
texture = ExtResource("6_i1sy5")
script = ExtResource("7_cl8wm")

[node name="ShopCardContainer" type="HBoxContainer" parent="CanvasLayer/Shop"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.428
anchor_right = 0.999
anchor_bottom = 0.812
offset_left = 577.0
offset_top = 31.76
offset_right = -99.0801
offset_bottom = -102.96
theme_override_constants/separation = 100
alignment = 1

[node name="GoldLabel" type="Label" parent="CanvasLayer/Shop"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.367
anchor_top = 0.121
anchor_right = 0.451
anchor_bottom = 0.205
offset_left = 5.35999
offset_top = 3.31999
offset_right = 6.07996
offset_bottom = 2.59999
theme_override_colors/font_color = Color(0.768627, 0.705882, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("11_d8n7i")
theme_override_font_sizes/font_size = 72
text = "500"

[node name="DeckShow" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/DeckShow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Modal" type="NinePatchRect" parent="CanvasLayer/DeckShow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_d4q3d")

[node name="Deck" type="GridContainer" parent="CanvasLayer/DeckShow/Panel/Modal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.161
anchor_top = 0.158
anchor_right = 0.83
anchor_bottom = 0.418
offset_left = 0.879974
offset_top = 0.359985
offset_right = 0.399902
offset_bottom = -0.440002
theme_override_constants/h_separation = 40
columns = 5

[node name="Slot" parent="CanvasLayer/DeckShow/Panel/Modal/Deck" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Deck"

[node name="Slot2" parent="CanvasLayer/DeckShow/Panel/Modal/Deck" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Deck"
id = 1

[node name="Slot3" parent="CanvasLayer/DeckShow/Panel/Modal/Deck" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Deck"
id = 2

[node name="Slot4" parent="CanvasLayer/DeckShow/Panel/Modal/Deck" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Deck"
id = 3

[node name="Slot5" parent="CanvasLayer/DeckShow/Panel/Modal/Deck" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Deck"
id = 4

[node name="Inventory" type="GridContainer" parent="CanvasLayer/DeckShow/Panel/Modal"]
layout_mode = 0
offset_left = 311.0
offset_top = 644.0
offset_right = 1591.0
offset_bottom = 924.0
theme_override_constants/h_separation = 40
columns = 5
script = ExtResource("14_oet43")

[node name="Slot" parent="CanvasLayer/DeckShow/Panel/Modal/Inventory" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Inventory"

[node name="Slot2" parent="CanvasLayer/DeckShow/Panel/Modal/Inventory" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Inventory"
id = 1

[node name="Slot3" parent="CanvasLayer/DeckShow/Panel/Modal/Inventory" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Inventory"
id = 2

[node name="Slot4" parent="CanvasLayer/DeckShow/Panel/Modal/Inventory" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Inventory"
id = 3

[node name="Slot5" parent="CanvasLayer/DeckShow/Panel/Modal/Inventory" instance=ExtResource("13_wockh")]
layout_mode = 2
slot_type = "Inventory"
id = 4

[node name="Close" type="Button" parent="CanvasLayer/DeckShow/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -98.0
offset_bottom = 107.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 72
text = "x"

[connection signal="mouse_entered" from="CanvasLayer/Shop/DeckContainer/DeckButton" to="." method="on_deck_button_hovered"]
[connection signal="mouse_entered" from="CanvasLayer/Shop/DeckContainer/DeckButton" to="CanvasLayer/Shop/DeckContainer/DeckTexture" method="on_mouse_entered_deck_button"]
[connection signal="mouse_exited" from="CanvasLayer/Shop/DeckContainer/DeckButton" to="CanvasLayer/Shop/DeckContainer/DeckTexture" method="on_mouse_exited_deck_button"]
[connection signal="pressed" from="CanvasLayer/Shop/DeckContainer/DeckButton" to="." method="on_deck_button_clicked"]
[connection signal="pressed" from="CanvasLayer/DeckShow/Panel/Close" to="." method="close_deck"]
